# aemory

./: .gitignore  Cargo.toml  LICENSE  README.md  aemory.pyi  pyproject.toml
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  release.yml
doc/: SPEC.md
example/: test_search.py
scripts/: download_protoc.py
src/: compiler.rs  embedder.rs  lib.rs  loader.rs  main.rs  retriever.rs  schema.rs
test/: benchmark.py  test_aemory.py
