[package]
name = "aemory"
version = "0.1.0"
edition = "2024"
autobins = false

[lib]
name = "aemory"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "aemory-cli"
path = "src/main.rs"

[dependencies]
# Core dependencies
lance = "2.0.1"
# arrow = "57.3.0"
arrow-array = "57.3.0"
arrow-schema = "57.3.0"
fastembed = "5.12.0"

# CLI and Async
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.50", features = ["full"] }

# Utilities
gray_matter = "0.3.2"
uuid = { version = "1.22.0", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5"
anyhow = "1.0"
indicatif = "0.18.4"
chrono = "0.4.44"
pyo3 = { version = "0.28.2", features = ["extension-module"] }
futures = "0.3.32"

# Optional: for vendored OpenSSL builds
openssl = { version = "0.10", optional = true }

[features]
vendored-ssl = ["openssl/vendored"]
