[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "aemory"
dynamic = ["version"]
requires-python = ">=3.8"
description = "High-performance RAG data compiler: pure Rust semantic search with no system dependencies"
readme = "README.md"
authors = [{ name = "huyixuan", email = "13423195166@163.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["knowledge-base", "semantic-search", "embeddings", "rag", "vector-database", "rust", "bert", "candle"]

[project.urls]
Homepage = "https://github.com/whoeason-que/aemory"

[tool.maturin]
# Build requirements: protoc (protobuf compiler) is required when building from source
# Users installing from PyPI get pre-built wheels and don't need protoc

[dependency-groups]
dev = ["pytest>=7.0", "pytest-benchmark>=4.0", "ruff"]

[tool.pytest.ini_options]
testpaths = ["python_tests"]
python_files = ["test_*.py", "benchmark.py"]
